finalise with preview environment changes

--- a/src/kubernetes/config.aat.yaml
+++ b/src/kubernetes/config.aat.yaml
@@ -4,17 +4,13 @@ metadata:
   name: aat-config
   namespace: ${NAMESPACE}
 data:
+  IDAM_API_URL: 'https://preprod-idamapi.reform.hmcts.net:3511'
+  IDAM_URL: 'https://preprod-idamapi.reform.hmcts.net:3511'
+  IDAM_AUTHENTICATION_WEB_URL: 'https://idam.preprod.ccidam.reform.hmcts.net'
+  IDAM_S2S_AUTH: 'http://rpe-service-auth-provider-aat.service.core-compute-aat.internal'
+  S2S_URL: 'http://rpe-service-auth-provider-aat.service.core-compute-aat.internal'
+  IDAM_S2S_AUTH_URL: 'http://rpe-service-auth-provider-aat.service.core-compute-aat.internal'
   PAY_URL: 'http://payment-api-aat.service.core-compute-aat.internal'
   FEES_URL: 'http://fees-register-api-aat.service.core-compute-aat.internal'
-  AAT_IDAM_API_URL: 'https://preprod-idamapi.reform.hmcts.net:3511'
-  AAT_IDAM_URL: 'https://preprod-idamapi.reform.hmcts.net:3511'
-  AAT_IDAM_AUTHENTICATION_WEB_URL: 'https://idam.preprod.ccidam.reform.hmcts.net'
-  AAT_IDAM_S2S_AUTH: 'http://rpe-service-auth-provider-aat.service.core-compute-aat.internal'
-  AAT_S2S_URL: 'http://rpe-service-auth-provider-aat.service.core-compute-aat.internal'
-  AAT_IDAM_S2S_AUTH_URL: 'http://rpe-service-auth-provider-aat.service.core-compute-aat.internal'
-  IDAM_API_URL: 'https://idam-api'
-  IDAM_URL: 'https://idam-api'
-  IDAM_AUTHENTICATION_WEB_URL: 'https://idam-authentication-web'
-  IDAM_S2S_AUTH: 'http://service-auth-provider-api'
-  S2S_URL: 'http://service-auth-provider-api'
-  IDAM_S2S_AUTH_URL: 'http://service-auth-provider-api'
+  CLAIM_STORE_URL: 'http://cmc-claim-store-aat.service.core-compute-aat.internal'
+  DRAFT_STORE_URL: 'http://draft-store-service-aat.service.core-compute-aat.internal'
