remove header on financial details section

--- a/src/kubernetes/deployment.template.yaml
+++ b/src/kubernetes/deployment.template.yaml
@@ -212,7 +212,7 @@ spec:
         env:
         - name: WAIT_HOSTS
           value: 'feature-toggle-api:8580'
-        - name: VERBOSE
+        - name: VERBOSEfinao
           value: 'true'
         - name: WAIT_HOSTS_TIMEOUT
           value: '300'
