change env specific configMap name back

--- a/src/kubernetes/deployment.template.yaml
+++ b/src/kubernetes/deployment.template.yaml
@@ -72,7 +72,7 @@ spec:
           value: ${CONTACT_EMAIL}
         envFrom:
         - configMapRef:
-            name: aat-config
+            name: ${SERVICE_NAME}-config
         resources:
           requests:
             memory: "256Mi"
