--- a/src/kubernetes/config.aat.yaml
+++ b/src/kubernetes/config.aat.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: aat-config
+  name: ${SERVICE_NAME}-config
   namespace: ${NAMESPACE}
 data:
   IDAM_API_URL: 'https://preprod-idamapi.reform.hmcts.net:3511'
