change to busybox image for initContainers

--- a/src/kubernetes/deployment.template.yaml
+++ b/src/kubernetes/deployment.template.yaml
@@ -160,7 +160,7 @@ spec:
     spec:
       initContainers:
       - name: init-wait-db
-        image: alpine
+        image: busybox
         command: ["sh", "-c", "for i in $(seq 1 300); do nc -zvw1 shared-database 5432 && exit 0 || sleep 3; done; exit 1"]
       containers:
       - image: hmcts/feature-toggle-api
@@ -207,7 +207,7 @@ spec:
     spec:
       initContainers:
       - name: init-wait-feature-toggle-api
-        image: alpine
+        image: busybox
         command: ["sh", "-c", "for i in $(seq 1 300); do nc -zvw1 feature-toggle-api 8580 && exit 0 || sleep 3; done; exit 1"]
       containers:
       - image: hmcts/cmc-feature-toggle-importer
