--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,16 @@
 language: node_js
 cache: yarn
-script:
-  - yarn --version
-  - yarn check --integrity
-  - yarn setup
-  - yarn lint
-  - yarn test
-  - yarn test:routes-parallel
-  - yarn test:a11y
-  - yarn test:coverage-unit
-after_success:
-  - yarn test:codacy-upload
-  - yarn test:codecov-upload
+jobs:
+  include:
+  - stage: yarn
+    script:
+      # require the branch name to be master (note for PRs this is the base branch name)
+      if: branch = master
+      - yarn --version
+      - yarn check --integrity
+      - yarn setup
+      - yarn lint
+      - yarn test
+      - yarn test:routes-parallel
+      - yarn test:a11y
+      - yarn test:coverage-unit
