--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,17 @@
+
 language: node_js
+node_js:
+- "8.12.0"
 cache: yarn
+
+stages:
+- name: yarn
+  if: branch = master  # require the branch name to be master (note for PRs this is the base branch name)
+
 jobs:
   include:
   - stage: yarn
     script:
-      # require the branch name to be master (note for PRs this is the base branch name)
-      if: branch = master
       - yarn --version
       - yarn check --integrity
       - yarn setup
@@ -14,3 +20,6 @@ jobs:
       - yarn test:routes-parallel
       - yarn test:a11y
       - yarn test:coverage-unit
+    after_success:
+      - yarn test:codacy-upload
+      - yarn test:codecov-upload
